<resources>
    <string name="app_name">MyHmsTest</string>
    <string name="title">Scan</string>
    <string name="scan_tip">Place the code within the frame</string>
    <string name="no_code_tip">No code detected.</string>
    <string name="confirm">OK</string>
    <string name="light">Touch for more light</string>
    <string name="light_off">Turn off light</string>
    <string name="default_view_decoe">Default View Mode</string>
    <string name="photo_decode">Decode Photo</string>
    <string name="customized_view_decode">Customized View Mode</string>
    <string name="bitmap_api_decode">Bitmap Mode</string>
    <string name="multiProcessor_api_syn_decode">MultiProcessor API Synchronous Mode</string>
    <string name="multiProcessor_api_asyn_decode">MultiProcessor API Asynchronous Mode</string>
    <string name="generate_QR_code">Generate QR Code</string>
    <string name="barcode_width">Barcode width:</string>
    <string name="barcode_height">Barcode height:</string>
    <string name="barcode_type">Type:</string>
    <string name="barcode_color">Color:</string>
    <string name="barcode_backgroundcolor">Background:</string>
    <string name="barcode_margin">Margin:</string>
    <string name="width_value">700</string>
    <string name="height_value">700</string>
    <string name="generate_barcode">Generate Barcode</string>
    <string name="save_barcode">Save Barcode</string>
    <string name="barcode_content">Barcode Content:</string>
    <string name="content_detail">HUAWEI Scan Kit scans and parses all major 1D and 2D barcodes, helping you quickly build barcode scanning functions into your apps.</string>
    <string name="content_detailb">MultiCodeDecoder：Decode Multi Codes</string>
    <string name="title_result">Result</string>
    <string name="code_format">Code Format</string>
    <string name="result_type">Result Type</string>
    <string name="result_content">Result</string>
    <string name="copy">Copy</string>
    <string name="add_contact">Add Contact</string>
    <string name="connect_network">Connet to network</string>
    <string name="add_calendar">Add to calendar</string>
    <string name="send_sms">Send SMS</string>
    <string name="call">Call</string>
    <string name="nivigation">Nivigation</string>
    <string name="send_email">Send Email</string>
    <string name="copy_toast">Content has been copied</string>
    <string name="open_browser">Open in browser</string>
    <string name="mwc_title">测试</string>
    <string name="mwc_subject">About Scan Kit</string>
    <string name="mwc_detail">An in-app scanner for 1D and 2D barcodes connects your app to real-world scenarios and helps you build powerful code scanning capabilities with a minimum of 5 lines of code.</string>
    <string name="scan_showresult">Scan results will show on screen</string>

    <string name="cloud_text">Cloud Text Recognition</string>

    <string name="select_from_album">Select image from album</string>
    <string name="take_photo">Take photo</string>
    <string name="video_frame">Video stream</string>
    <string name="versions">Version:</string>
    <string name="simplified_chinese">Simplified chinese</string>
    <string name="english_choose">English</string>
    <string name="japanese_choose">Japanese</string>
    <string name="korean_choose">Korean</string>
    <string name="latin_choose">Latin</string>
    <string name="get_data_failed">Failed to get data.</string>
    <string name="loading_data">Loading…</string>
    <string name="chinese">Chinese</string>
    <string name="nonetwork">nonetwork</string>
    <string name="abnormal">service is abnormal</string>
    <string name="speak_abnormal">Language and speaker do not match</string>
    <string name="replay">replay</string>

    <!--全称-->
    <string name="icr_s">ID Card Recognition</string>
    <string name="text_detection_s">Text Recognition</string>
    <string name="document_recognition_s">Document Recognition</string>
    <string name="aft_s">Audio File Transcription</string>
    <string name="bcr_s">Bank Card Recognition</string>
    <string name="ucr_s">General Card Recognition</string>
    <string name="asr_s">Speech Recognition</string>
    <string name="tts_s">Text to speech</string>
    <!--简写-->
    <string name="document_recognition">Document</string>
    <string name="translate">Translation</string>
    <string name="aft">AFT</string>
    <string name="bcr">BCR</string>
    <string name="gcr">GCR</string>
    <string name="icr">ICR</string>
    <string name="text_detection">Text</string>
    <string name="asr">ASR</string>
    <string name="tts">TTS</string>

    <string name="all">all</string>
    <string name="coming_soon">coming soon</string>
    <string name="back">back</string>
    <string name="translate_v">Translate</string>
    <string name="translate_v_p">Translate Picture</string>
    <string name="language_recognition">Language Recognition</string>
    <string name="elapsed_time">Elapsed Time: </string>
    <string name="zero_character"> 0 character</string>
    <string name="translate_text_hint">Machine Learning</string>
    <string name="intro">text to speak</string>
    <string name="queue_add">speech</string>
    <string name="play">play</string>
    <string name="release_tts">stop</string>
    <string name="pause">pause</string>
    <string name="resume">resume</string>

    <!--身份证识别-->
    <string name="icr_upload_self_photo">Upload photos of your ID card</string>
    <string name="icr_upload_face">Photo side</string>
    <string name="icr_upload_back">Other side</string>
    <string name="icr_hint_upload_valid_photo">Upload photos of your valid ID card.</string>
    <string name="icr_hint_image_not_complete">Something may be blocking important information in the photo. Retake the photo if needed.</string>
    <string name="icr_hint_ensure_user_info_security">Your personal information will be protected in accordance with the law.</string>
    <string name="recognition_results">Recognition results:</string>
    <string name="icr_mark">* This is for Chinese mainland residents only</string>
    <string name="device_side">Device Side</string>
    <string name="cloud_side">Cloud</string>
    <!--通用卡证-->
    <string name="gcr_upload_self_photo">Upload photos of your card</string>
    <string name="gcr_upload">Upload card</string>
    <string name="hk_pass">Hong Kong, Macao and Taiwan pass</string>
    <string name="hk_id_card">Hong Kong Identity Card</string>
    <string name="home_card">Mainland Travel Permit (Hong Kong, Macao, and Taiwan residents)</string>
    <string name="click_to_switch"><u>Click to switch</u></string>
    <string name="vedio_tip">Recognizing, please align the edges.</string>
    <string name="capture_tip">Taking photo…\nKeep the edges aligned</string>

    <string name="bcr_upload_self_photo">"Please upload the bank card"</string>
    <string name="bcr_upload">Upload card</string>

    <!--ATF-->

    <string name="record">Record</string>
    <string name="str_ok">OK</string>
    <string name="converting">Converting...</string>
    <string name="recording">Recording...</string>
    <string name="str_cancel">Cancel</string>
    <string name="convert_failed">Failed:</string>
    <string name="language">Language:</string>
    <string name="stop_record">stop</string>

    <string name="error_aft_network">Abnormal network connection</string>
    <string name="error_aft_internal">Internal error</string>
    <string name="error_aft_illegal_parameters">Illegal parameter</string>
    <string name="error_aft_authorize_failed">Authentication failed</string>
    <string name="error_aft_audio_length_overflow">Audio length overflow</string>
    <string name="error_aft_audio_transcript_failed">Audio transcript failed</string>

    <!--先默认中文-->
    <string name="start">start</string>
    <string name="please_speak">Please speak</string>
    <string name="example_say">You could say that.</string>
    <string name="example_one">I want to take a taxi to Wanda Plazaz</string>
    <string name="example_two">I want to see Infernal Affairs</string>
    <string name="example_three">Where is the nearest Shentong express</string>
    <string name="record_path">/mlkit-asr</string>
    <string name="record_text_name">text.txt</string>
    <string name="record_json_name">description.json</string>
    <string name="record_pcm_name">audio.pcm</string>

    <string name="error_no_network">ERROR: Network unavailable, please try again…</string>
    <string name="error_service_unavailable">ERROR: Service Unavailable</string>
    <string name="error_no_sound_times_exceed">ERROR: No speech detected within 6S, automatic disconnection</string>
    <string name="error_no_understand">ERROR: The server could not parse your voice</string>
    <string name="asr_sound_pickup_interface_type">Sound pickup interface type</string>
    <string name="asr_sound_pickup_interface_type_plugin">ASR Plugin</string>
    <string name="asr_sound_pickup_interface_type_custom">Custom</string>
    <string name="asr_mark">* This service is only available for Huawei mobile phones</string>

    <string name="style">Style:</string>
    <string name="mode">Play Mode:</string>
    <string name="volume">Volume:</string>
    <string name="speech_rate">Speech Rate:</string>
    <string name="queuing_mode">Queuing Mode</string>
    <string name="clear_mode">Clear Mode</string>
    <string name="please_enter_text">Please enter text~</string>

    <string name="male_zh">Male-zh</string>
    <string name="male_en">Male-en</string>
    <string name="female_fr">Female-fr</string>
    <string name="female_es">Female-es</string>
    <string name="female_en">Female-en</string>
    <string name="female_zh">Female-zh</string>
    <string name="init_progress">50%</string>

    <string name="online_translate">online translation</string>
    <string name="offline_translate">offline translation</string>
    <string name="download">download</string>
    <string name="french">French</string>
    <string name="spanish">Spanish</string>
    <string name="subject">Translate the words in your photo</string>
    <string name="select_photo">Start</string>
    <string name="detail">Choose a photo to do the translation</string>
    <string name="please_select_picture">Please select a photo to process~</string>
    <string name="camera_permission_rationale">This app requires camera and storage access in order to
        demo the API.</string>
    <string name="settings">Settings</string>
    <string name="cancel">cancel</string>
    <string name="select_picture">Select Picture</string>
    <string name="take_picture">Take Picture</string>
    <string name="save">Save</string>
    <string name="translate_success">Translate success</string>
    <string name="translate_start">Translate starts</string>
    <string name="no_pic_neededSave">Null Image needed to save</string>
    <string name="save_success">Save success</string>
</resources>