<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="713dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:padding="15dp"
            android:text="My HMS Test"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />


        <Button

            android:id="@+id/button_bankcard"
            android:layout_width="310dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@color/black"
            android:onClick="loadBankCardRecognitionBtnClick"
            android:text="@string/bcr_s"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="16sp" /><![CDATA[


    android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    ]]>

        <Button

            android:id="@+id/button_idcard"
            android:layout_width="310dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@color/black"
            android:onClick="loadIdCardRecognitionBtnClick"
            android:text="@string/icr_s"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <Button

            android:id="@+id/button_text"
            android:layout_width="310dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@color/black"
            android:onClick="loadTextRecognitionBtnClick"
            android:text="@string/text_detection_s"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <Button

            android:id="@+id/button_p_to_text"
            android:layout_width="310dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@color/black"
            android:onClick="loadTextRecognitionPicBtnClick"
            android:text="@string/translate_v_p"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <Button

            android:id="@+id/button_scan1"
            android:layout_width="310dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@color/black"
            android:onClick="loadScanKitBtnClick"
            android:text="@string/default_view_decoe"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_scan3"
            android:layout_width="310dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@color/black"
            android:onClick="newViewBtnClick"
            android:text="@string/customized_view_decode"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button_scan4"
            android:layout_width="310dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@color/black"
            android:onClick="bitmapBtnClick"
            android:text="@string/bitmap_api_decode"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="16sp" />


        <Button
            android:layout_width="310dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@color/black"
            android:onClick="generateQRCodeBtnClick"
            android:text="@string/generate_QR_code"
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="16sp" />

        <Button
            android:layout_width="310dp"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:background="@color/black"
            android:onClick="ImageFaceBtnClick"
            android:text="Image Face "
            android:textAllCaps="false"
            android:textColor="#ffffff"
            android:textSize="16sp" />


    </LinearLayout>

</RelativeLayout>